Fix spacing of gallery images

--- a/css/phaesporia.css
+++ b/css/phaesporia.css
@@ -82,6 +82,10 @@ TABBED CONTENT
 	color: #fff;
 }
 
+#gallery img {
+	margin: 1em 0.5em;
+}
+
 /*******************
 FOOTER
 ********************/
